fix btn z-index

--- a/src/views/idea/Idea.scss
+++ b/src/views/idea/Idea.scss
@@ -12,6 +12,10 @@
 .nav-link--underline {
 	display: inline-block;
 	margin-top: auto;
+	z-index: unset;
+	&::after {
+		z-index: unset;
+	}
 
 	&::before {
 		content: "";
@@ -21,7 +25,6 @@
 		width: 100%;
 		height: 2px;
 		background-color: $blue-main;
-		z-index: -1;
 		transition: transform 0.4s ease;
 		transform: scale(0, 1);
 	}
